discussion almost finished

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -370,18 +370,9 @@ Our results highlight the impact that deployment of far UVC could have in reduci
 
 For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it does not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC can still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve"). Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available. 
 
-In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately X% and Y% for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. The increased impact of far UVC on the "Influenza-like" pathogen (something also observed in the epidemic scenarios) is primarily dirven by differences in the starting $R_0$ of each pathogen (~1.35 for "Influenza-like" and ~2.5 for SARS)
-when compared to the "SARS-CoV-2-like" pathogen occurs because the former has a lower starting R0. As the initial R0 of the pathogen increases, the non-linear nature of the fraction of transmission you have to avert to reduce the R below 1 increasingly reduces the impact of far UVC on the epidemic outbreak.
+In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately X% and Y% for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. The increased impact of far UVC on the "Influenza-like" pathogen (something also observed in the epidemic scenarios) is primarily dirven by differences in the starting $R_0$ of each pathogen (~1.35 for "Influenza-like" and ~2.5 for "SARS-CoV-2-Like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities. At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilising immunity post infection can never be >100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes. By the same logic, when $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
 
+Our results also highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is low (e.g. 10% considered in the analyses presented in this report). As the proportion of space covered increases, there is increasing convergence between the two strategies (as a greater number of total spaces are covered). At 100% coverage, the two strategies are identical. Our results suggest that in instances where only a low fraction of spaces are likely to be covered (for instance during initial adoption of the technology), the value of information that enables installation to be targeted at the riskiest spaces is likely to be substantial. 
 
-
-
-Importantly, our results highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is likely to be low (e.g. 10% considered in the analyses presented in this report). Whilst 
-
-
-
-The observed differences in predicted far UVC impact between the two pathogen archetypes arise primarily because of their different $R_0$ values. In Figure \@ref(fig:analytical-relationship) we show the analytical relationship between $R_0$ and prevalence of infection, derived for a SEIRS compartmental model (see [here](https://www.nature.com/articles/s41592-020-0856-2) and [here](https://shiny.bcgsc.ca/posepi2/)) that shares a similar representation of a disease's natural history to `helios`. We note that the results presented in \@ref(fig:analytical-relationship) are not results from running `helios` (instead they are the analytical solution of a significantly more tractable mathematical model that is simpler than but similar to `helios`) and are displayed here solely for the purpose of illustrating a generally-held non-linearity between transmissibility ($R_{0}$) and infection prevalence.
-
-In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) or the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities. At higher values of $R_{0}$ however, they saturate and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes. By the same logic, when $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
 
 # Bibliography {.unnumbered}
